--- a/code/02_Bilstm.ipynb
+++ b/code/02_Bilstm.ipynb
@@ -14,7 +14,9 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "from torch.autograd import Variable\n",
-    "from torch.utils.data import Dataset, DataLoader, TensorDataset"
+    "from torch.utils.data import Dataset, DataLoader, TensorDataset\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -26,13 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class BiLSTM(nn.Module):\n",
     "\n",
-    "    def __init__(self, input_dim, hidden_dim, dense_dim, output_dim, num_layers, use_gpu, batch_size, dropout=0.5):\n",
+    "    def __init__(self, input_dim, hidden_dim, dense_dim, output_dim, num_layers, use_gpu, batch_size, is_training=True, dropout=0.5):\n",
     "        \"\"\"\n",
     "        Args:\n",
     "            ;input_dim: 30\n",
@@ -47,7 +49,7 @@
     "        self.batch_size = batch_size\n",
     "        self.dropout = dropout\n",
     "        self.num_layers = num_layers\n",
-    "        self.is_training = True\n",
+    "        self.is_training = is_training\n",
     "\n",
     "        # define layers\n",
     "        self.bilstm = nn.LSTM(input_size=input_dim, num_layers=num_layers, hidden_size=hidden_dim, bidirectional=True)\n",
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,13 +95,14 @@
     "num_layers = 2\n",
     "use_gpu = True\n",
     "is_cuda = True\n",
+    "is_training=True\n",
     "batch_size = 32\n",
     "dropout=0.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,6 +114,7 @@
     "    num_layers,\n",
     "    use_gpu,\n",
     "    batch_size,\n",
+    "    is_training,\n",
     "    dropout\n",
     ")\n",
     "\n",
@@ -120,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +155,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ang': 0, 'exc': 1, 'neu': 2, 'sad': 3}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_map_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,20 +193,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train test split: 대략 10%\n",
-    "train_features = features[:-500]\n",
-    "train_labels = labels_int[:-500]\n",
-    "test_features = features[-500:]\n",
-    "test_labels = labels_int[-500:]"
+    "train_features, test_features, train_labels, test_labels = train_test_split(\n",
+    "    features, labels_int, test_size=0.1, random_state=42\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train accuracy: 0.8636158701532912\n"
+      "train accuracy: 0.9158036920306168\n"
      ]
     },
     {
@@ -288,14 +311,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test accuracy: 0.496\n"
+      "test accuracy: 0.4817813765182186\n"
      ]
     },
     {
@@ -316,16 +339,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f41f727cbe0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f53be0b7940>"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -350,11 +373,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# save as state_dict\n",
+    "- https://tutorials.pytorch.kr/beginner/saving_loading_models.html#state-dict"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "torch.save(bilstm.state_dict(), \"../data/bilstm_state_dict.pt\")"
+   ]
   }
  ],
  "metadata": {
