Allow gpu-cpu selection

--- a/code/03_Load_pretrained_model_for_inference.ipynb
+++ b/code/03_Load_pretrained_model_for_inference.ipynb
@@ -7,28 +7,37 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
     "\n",
     "import torch\n",
-    "import torch.optim as optim\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "from torch.autograd import Variable\n",
-    "from torch.utils.data import Dataset, DataLoader, TensorDataset\n",
     "\n",
+    "import time\n",
     "from utils.feature_extractor_utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyper parms\n",
+    "use_gpu = False\n",
+    "state_dict_directory = \"../data/bilstm_state_dict.pt\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# load model"
+    "# Define model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,23 +80,6 @@
     "        self.dense_hidden = nn.Linear(hidden_dim * 2, dense_dim)\n",
     "        self.dense_out = nn.Linear(dense_dim, output_dim)\n",
     "\n",
-    "        # define hidden, cell for BiLSTM\n",
-    "        ## (num_layers * num_directions, batch, hidden_size)\n",
-    "        if use_gpu:\n",
-    "            self.h_0 = Variable(\n",
-    "                torch.zeros(2 * num_layers, self.batch_size, hidden_dim).cuda()\n",
-    "            )\n",
-    "            self.c_0 = Variable(\n",
-    "                torch.zeros(2 * num_layers, self.batch_size, hidden_dim).cuda()\n",
-    "            )\n",
-    "        else:\n",
-    "            self.h_0 = Variable(\n",
-    "                torch.zeros(2 * num_layers, self.batch_size, hidden_dim)\n",
-    "            )\n",
-    "            self.c_0 = Variable(\n",
-    "                torch.zeros(2 * num_layers, self.batch_size, hidden_dim)\n",
-    "            )\n",
-    "\n",
     "    def forward(self, audio_features):\n",
     "        # audio_features = (seq_len, batch, input_size)\n",
     "        lstm_output, (h_1, c_1) = self.bilstm(audio_features)\n",
@@ -105,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,14 +106,15 @@
        "IncompatibleKeys(missing_keys=[], unexpected_keys=[])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# load model\n",
     "bilstm = BiLSTM()\n",
-    "bilstm.load_state_dict(torch.load(\"../data/bilstm_state_dict.pt\"))"
+    "bilstm.load_state_dict(torch.load(state_dict_directory))"
    ]
   },
   {
@@ -140,53 +133,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wav_file_directory = \"../data/speech_sample.wav\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_label_of_wav(wav_file):\n",
-    "    extracted_feature = feature_generator(wav_file)\n",
-    "    extracted_feature = np.expand_dims(extracted_feature, 0) # batch_dim\n",
-    "    feature_tensor = torch.tensor(extracted_feature).float().permute(2,0,1)\n",
-    "    predicted_label = bilstm(feature_tensor).argmax(dim=1).cpu().numpy()[0]\n",
-    "    return predicted_label"
+    "# check gpu\n",
+    "if use_gpu:\n",
+    "    bilstm.cuda()\n",
+    "    device = torch.device(\"cuda\")\n",
+    "else:\n",
+    "    device = None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_label_of_wav(wav_file, use_gpu):\n",
+    "    # get features and transform\n",
+    "    extracted_feature = feature_generator(wav_file)\n",
+    "    extracted_feature = np.expand_dims(extracted_feature, 0) # batch_dim\n",
+    "    \n",
+    "    # convert features array to tensor\n",
+    "    if use_gpu:\n",
+    "        feature_tensor = torch.tensor(extracted_feature).float().permute(2,0,1).to(device)\n",
+    "    else:\n",
+    "        feature_tensor = torch.tensor(extracted_feature).float().permute(2,0,1)\n",
+    "        \n",
+    "    # predict\n",
+    "    ###predicted_label = bilstm(feature_tensor).argmax(dim=1).cpu().numpy()[0]\n",
+    "    predicted_label = bilstm(feature_tensor).argmax(dim=1).item()\n",
+    "    return predicted_label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home1/irteam/anaconda3/envs/py36_torch/lib/python3.6/site-packages/librosa/filters.py:235: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-      "  warnings.warn('Empty filters detected in mel frequency basis. '\n"
+      "label: 3\n",
+      "0.7268083095550537\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_label_of_wav(wav_file_directory)"
+    "wav_file = \"../data/speech_sample.wav\"\n",
+    "\n",
+    "a = time.time()\n",
+    "print(\"label:\", predict_label_of_wav(wav_file, use_gpu))\n",
+    "b = time.time()\n",
+    "\n",
+    "print(b-a)"
    ]
   }
  ],
