Add params on predict_label method

--- a/code/03_Load_pretrained_model_for_inference.ipynb
+++ b/code/03_Load_pretrained_model_for_inference.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# hyper parms\n",
-    "use_gpu = False\n",
+    "use_gpu = True\n",
     "state_dict_directory = \"../data/bilstm_state_dict.pt\""
    ]
   },
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_label_of_wav(wav_file, use_gpu):\n",
+    "def predict_label_of_wav(wav_file, use_gpu, device):\n",
     "    # get features and transform\n",
     "    extracted_feature = feature_generator(wav_file)\n",
     "    extracted_feature = np.expand_dims(extracted_feature, 0) # batch_dim\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
      "output_type": "stream",
      "text": [
       "label: 3\n",
-      "0.7268083095550537\n"
+      "0.6816210746765137\n"
      ]
     }
    ],
@@ -186,7 +186,7 @@
     "wav_file = \"../data/speech_sample.wav\"\n",
     "\n",
     "a = time.time()\n",
-    "print(\"label:\", predict_label_of_wav(wav_file, use_gpu))\n",
+    "print(\"label:\", predict_label_of_wav(wav_file, use_gpu, device))\n",
     "b = time.time()\n",
     "\n",
     "print(b-a)"
