--- a/code/03_Load_pretrained_model_for_inference.ipynb
+++ b/code/03_Load_pretrained_model_for_inference.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "# hyper parms\n",
     "use_gpu = True\n",
-    "state_dict_directory = \"../data/bilstm_state_dict.pt\""
+    "state_dict_directory = \"../data/bilstm_augmented_state_dict.pt\""
    ]
   },
   {
@@ -77,7 +77,8 @@
     "            hidden_size=hidden_dim,\n",
     "            bidirectional=True,\n",
     "        )\n",
-    "        self.dense_hidden = nn.Linear(hidden_dim * 2, dense_dim)\n",
+    "        self.dense_hidden = nn.Sequential(nn.Linear(hidden_dim*2, dense_dim),\n",
+    "                                         nn.ReLU(inplace=True))\n",
     "        self.dense_out = nn.Linear(dense_dim, output_dim)\n",
     "\n",
     "    def forward(self, audio_features):\n",
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +179,7 @@
      "output_type": "stream",
      "text": [
       "label: 3\n",
-      "0.6816210746765137\n"
+      "0.6739509105682373\n"
      ]
     }
    ],
